--- a/Notebook_GetDataSets.ipynb
+++ b/Notebook_GetDataSets.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e6462eeb",
+   "metadata": {},
+   "source": [
+    "# Get DataSets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e227292",
+   "metadata": {},
+   "source": [
+    "This notebook fetches the datasets for you and stores it in the local ./data folder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "21bedd51",
+   "id": "91c845de",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-20T12:19:36.240013Z",
@@ -17,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "291dda2b",
+   "id": "bbb86dd2",
    "metadata": {},
    "source": [
     "Storing the various urls for the different parts of the dataset"
@@ -26,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a9cdaa8c",
+   "id": "e4624403",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-20T12:19:37.431130Z",
@@ -44,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7478e3d",
+   "id": "748571a7",
    "metadata": {},
    "source": [
     "Reading the dataset into dataframes"
@@ -53,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "35f7d775",
+   "id": "8faecd71",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-20T12:19:47.169584Z",
@@ -70,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a9fa0a6",
+   "id": "f7f0bad4",
    "metadata": {},
    "source": [
     "Writing each dataframe as a  csv to your local  _'data/'_  folder"
@@ -79,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ae330455",
+   "id": "03069bd5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-20T12:19:48.067740Z",
