--- a/Notebook_GetDataSets.ipynb
+++ b/Notebook_GetDataSets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e6462eeb",
+   "id": "245721f6",
    "metadata": {},
    "source": [
     "# Get DataSets"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e227292",
+   "id": "db5556fe",
    "metadata": {},
    "source": [
     "This notebook fetches the datasets for you and stores it in the local ./data folder"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "91c845de",
+   "id": "8f6b91cc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-20T12:19:36.240013Z",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbb86dd2",
+   "id": "05d9a05f",
    "metadata": {},
    "source": [
     "Storing the various urls for the different parts of the dataset"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e4624403",
+   "id": "cbf63e17",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-20T12:19:37.431130Z",
@@ -52,15 +52,15 @@
    "outputs": [],
    "source": [
     "# These are the URLs for the various parts of the dataset\n",
-    "Sf_url  = \"https://drivendata-prod.s3.amazonaws.com/data/7/public/SubmissionFormat.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYZDRLDSRZ%2F20220420%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220420T115833Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=1ac200bcbd9b384b4397e9c2702959e7dbcf0b188f65c5dd7efe2668c8f5636c\"\n",
-    "TrV_url = \"https://drivendata-prod.s3.amazonaws.com/data/7/public/4910797b-ee55-40a7-8668-10efd5c1b960.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYZDRLDSRZ%2F20220420%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220420T115833Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=65a5d2537703e0f330c6f85c8a7a58d99ad92e946f985327bc56e43786f8b9b9\"\n",
-    "TrL_url = \"https://drivendata-prod.s3.amazonaws.com/data/7/public/0bf8bc6e-30d0-4c50-956a-603fc693d966.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYZDRLDSRZ%2F20220420%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220420T115833Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=891e0bfcbe0a3b2488dd83cdb913b2ac88ee87bd6191b6e5ff603fd829c52123\"\n",
-    "TeV_url = \"https://drivendata-prod.s3.amazonaws.com/data/7/public/702ddfc5-68cd-4d1d-a0de-f5f566f76d91.csv?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARVBOBDCYZDRLDSRZ%2F20220420%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220420T115833Z&X-Amz-Expires=86400&X-Amz-SignedHeaders=host&X-Amz-Signature=e2d8ab1ffe7cf6c6efac417112b82528e56676aa50021e414e5dcb9d0d1dc4f7\""
+    "Sf_url  = \"https://drivendata-prod.s3.amazonaws.com/data/7/public/SubmissionFormat.csv\"\n",
+    "TrV_url = \"https://drivendata-prod.s3.amazonaws.com/data/7/public/4910797b-ee55-40a7-8668-10efd5c1b960.csv\"\n",
+    "TrL_url = \"https://drivendata-prod.s3.amazonaws.com/data/7/public/0bf8bc6e-30d0-4c50-956a-603fc693d966.csv\"\n",
+    "TeV_url = \"https://drivendata-prod.s3.amazonaws.com/data/7/public/702ddfc5-68cd-4d1d-a0de-f5f566f76d91.csv\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "748571a7",
+   "id": "d75f649d",
    "metadata": {},
    "source": [
     "Reading the dataset into dataframes"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8faecd71",
+   "id": "51db3900",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-20T12:19:47.169584Z",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7f0bad4",
+   "id": "e7102119",
    "metadata": {},
    "source": [
     "Writing each dataframe as a  csv to your local  _'data/'_  folder"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "03069bd5",
+   "id": "e802c08e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-04-20T12:19:48.067740Z",
